# basic-rag

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  suggestions.txt
.github/workflows/: ci-cd.yml
app/: __init__.py  main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: health.py
app/api/v1/: router.py
app/api/v1/endpoints/: health.py
app/core/: config.py
app/schemas/: __init__.py  health.py  root.py
scripts/: lint.py
tests/: test_health.py
