[tool.poetry]
name = "basic-rag"
version = "0.1.0"
description = "A Retrieval-Augmented Generation (RAG) web service using FastAPI"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"

[tool.poetry.group.lint.dependencies]
ruff = "^0.2.1"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
types-requests = "^2.31.0.20240125"
types-urllib3 = "^1.26.25.14"
types-setuptools = "^69.0.0.20240125"
fastapi-type-stubs = "^0.1.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_optional = true
